# canvas-confetti-qml

./: .gitignore  LICENSE  README.md
Confetti/: CMakeLists.txt  Confetti.qml  Main.qml  confetti.js  main.cpp
ConfettiExampleProject/: CMakeLists.txt  Main.qml  main.cpp
ConfettiExampleProject/Confetti/: CMakeLists.txt  ConfettiCavnas.qml
